--- a/bwt.yml
+++ b/bwt.yml
@@ -1,4 +1,100 @@
 name: bwt
 channels:
+  - conda-forge
   - defaults
+dependencies:
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_gnu
+  - anyio=2.0.2=py39hf3d152e_4
+  - argon2-cffi=20.1.0=py39h3811e60_2
+  - async_generator=1.10=py_0
+  - attrs=20.3.0=pyhd3deb0d_0
+  - babel=2.9.0=pyhd3deb0d_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.1=py_0
+  - bleach=3.2.1=pyh9f0ad1d_0
+  - brotlipy=0.7.0=py39h3811e60_1001
+  - ca-certificates=2020.12.5=ha878542_0
+  - certifi=2020.12.5=py39hf3d152e_1
+  - cffi=1.14.4=py39he32792d_1
+  - chardet=4.0.0=py39hf3d152e_1
+  - cryptography=3.3.1=py39h3da14fd_1
+  - decorator=4.4.2=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=pyhd8ed1ab_1003
+  - idna=2.10=pyh9f0ad1d_0
+  - importlib-metadata=3.4.0=py39hf3d152e_0
+  - importlib_metadata=3.4.0=hd8ed1ab_0
+  - ipykernel=5.4.2=py39hef51801_0
+  - ipython=7.19.0=py39hef51801_0
+  - ipython_genutils=0.2.0=py_1
+  - jedi=0.18.0=py39hf3d152e_2
+  - jinja2=2.11.2=pyh9f0ad1d_0
+  - json5=0.9.5=pyh9f0ad1d_0
+  - jsonschema=3.2.0=py_2
+  - jupyter_client=6.1.11=pyhd8ed1ab_1
+  - jupyter_core=4.7.0=py39hf3d152e_0
+  - jupyter_server=1.2.1=py39hf3d152e_0
+  - jupyterlab=3.0.4=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+  - jupyterlab_server=2.1.2=pyhd8ed1ab_0
+  - ld_impl_linux-64=2.35.1=hea4e1c9_1
+  - libffi=3.3=h58526e2_2
+  - libgcc-ng=9.3.0=h5dbcf3e_17
+  - libgomp=9.3.0=h5dbcf3e_17
+  - libsodium=1.0.18=h36c2ea0_1
+  - libstdcxx-ng=9.3.0=h2ae2ef3_17
+  - markupsafe=1.1.1=py39h3811e60_3
+  - mistune=0.8.4=py39h3811e60_1003
+  - nbclassic=0.2.6=pyhd8ed1ab_0
+  - nbclient=0.5.1=py_0
+  - nbconvert=6.0.7=py39hf3d152e_3
+  - nbformat=5.0.8=py_0
+  - ncurses=6.2=h58526e2_4
+  - nest-asyncio=1.4.3=pyhd8ed1ab_0
+  - notebook=6.2.0=py39hf3d152e_0
+  - openssl=1.1.1i=h7f98852_0
+  - packaging=20.8=pyhd3deb0d_0
+  - pandoc=2.11.3.2=h7f98852_0
+  - pandocfilters=1.4.2=py_1
+  - parso=0.8.1=pyhd8ed1ab_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pip=20.3.3=pyhd8ed1ab_0
+  - prometheus_client=0.9.0=pyhd3deb0d_0
+  - prompt-toolkit=3.0.10=pyha770c72_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pycparser=2.20=pyh9f0ad1d_2
+  - pygments=2.7.3=pyhd8ed1ab_0
+  - pyopenssl=20.0.1=pyhd8ed1ab_0
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyrsistent=0.17.3=py39h3811e60_2
+  - pysocks=1.7.1=py39hf3d152e_3
+  - python=3.9.1=hffdb5ce_3_cpython
+  - python-dateutil=2.8.1=py_0
+  - python_abi=3.9=1_cp39
+  - pytz=2020.5=pyhd8ed1ab_0
+  - pyzmq=20.0.0=py39hea8fd45_1
+  - readline=8.0=he28a2e2_2
+  - requests=2.25.1=pyhd3deb0d_0
+  - send2trash=1.5.0=py_0
+  - setuptools=49.6.0=py39hf3d152e_3
+  - six=1.15.0=pyh9f0ad1d_0
+  - sniffio=1.2.0=py39hf3d152e_1
+  - sqlite=3.34.0=h74cdb3f_0
+  - terminado=0.9.2=py39hf3d152e_0
+  - testpath=0.4.4=py_0
+  - tk=8.6.10=h21135ba_1
+  - tornado=6.1=py39h3811e60_1
+  - traitlets=5.0.5=py_0
+  - tzdata=2020f=he74cb21_0
+  - urllib3=1.26.2=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
+  - wheel=0.36.2=pyhd3deb0d_0
+  - xz=5.2.5=h516909a_1
+  - zeromq=4.3.3=h58526e2_3
+  - zipp=3.4.0=py_0
+  - zlib=1.2.11=h516909a_1010
 prefix: /home/damase/miniconda3/envs/bwt
